--- a/css/shortcode/header.css
+++ b/css/shortcode/header.css
@@ -27,18 +27,30 @@
   float:right;
 }
 .main__menu:hover {
-  display: flex;
-  float:right;
+/*  display: flex;
+  float: right;*/
   font-weight: 700;
 }
 .main__menu > li > a {
   color: #ffffff;
-  display: block;
+  display: inline-block;
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
   position: relative;
+  text-align: center;
+  padding:4px 8px;
 }
+.main__menu > li > a::after {
+display: block;
+content: attr(title);
+font-weight: bold;
+height: 0;
+overflow: hidden;
+visibility: hidden;
+padding:4px 8px;
+}
+
 .main__menu > li {
   padding: 0 20px;
   position: relative;
