--- a/style.css
+++ b/style.css
@@ -3940,7 +3940,7 @@ a.shipping-calculator-button:hover{
   font-size: 14px !important;
   line-height: 22px !important;
   margin-bottom: 24px !important;
-  margin-right:0px;
+  margin-right: 0px !important;
 }
 .contact_info a {
   float: right;
