--- a/css/style.css
+++ b/css/style.css
@@ -3970,6 +3970,7 @@ a.shipping-calculator-button:hover{
 .single__pro .foo {
     box-shadow: 0px 3px 30px 3px rgba(31, 46, 46, 0.1);
     margin-top: 0px;
+    margin-bottom: 25px;
 }
 
 .zmdi-download {
